# overlay-risk

./: .buildpacks  .gitignore  Aptfile  LICENSE  Makefile  Procfile  README.md  mainnet.yaml  noxfile.py  observations.csv  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python.yaml
contracts/: Keep3rV1OracleMetrics.sol
contracts/test/: TestKeep3rV1Oracle.sol
data/: GAUSS_10_1_0.01.csv  GAUSS_10_1_0.02.csv  GAUSS_10_1_0.03.csv  GAUSS_10_2_0.01.csv  GAUSS_10_2_0.02.csv  GAUSS_10_2_0.03.csv  GAUSS_10_3_0.01.csv  GAUSS_10_3_0.02.csv  GAUSS_10_3_0.03.csv  GAUSS_30_1_0.01.csv  GAUSS_30_1_0.02.csv  GAUSS_30_1_0.03.csv  GAUSS_30_2_0.01.csv  GAUSS_30_2_0.02.csv  GAUSS_30_2_0.03.csv  GAUSS_30_3_0.01.csv  GAUSS_30_3_0.02.csv  GAUSS_30_3_0.03.csv  GAUSS_60_1_0.01.csv  GAUSS_60_1_0.02.csv  GAUSS_60_1_0.03.csv  GAUSS_60_2_0.01.csv  GAUSS_60_2_0.02.csv  GAUSS_60_2_0.03.csv  GAUSS_60_3_0.01.csv  GAUSS_60_3_0.02.csv  GAUSS_60_3_0.03.csv
notebooks/: data_fetch_and_prep.ipynb  risk_analysis.ipynb  univ3-funding.ipynb  univ3-metrics.ipynb  univ3-transform.ipynb
notebooks/BTCUSD-20221027/: BTCUSD-data_fetch_and_prep-20221027.ipynb  BTCUSD-univ3-funding-20221027.ipynb  (+3 more)
params/: caps.py  funding.py  get_risk_parameters.py  helpers.py  impact.py  liquidations.py  pricedrift.py
scripts/: BAYC_distributions.ipynb  backfill_influx_bulk.py  chainlink_data_pull.py  check_chainlink_decimals.py  check_deployed_market.py  clean_data.py  clean_univ3_data.py  coinbase_prices.py  csv_caps.py  csv_caps_WIP.py  csv_funding.py  csv_funding_WIP.py  csv_impact.py  csv_liquidations.py  csv_pricedrift.py  cumulatives_to_twap.py  deploy_kv2o.py  fit_stable.py  influx_backfill.py  influx_balancer_1h.py  influx_csv.py  influx_csv_monthly.py  influx_funding.py  influx_kv1o.py  influx_metrics.py  influx_metrics_balancer.py  influx_metrics_univ3.py  influx_metrics_univ3_parallel.py  influx_metrics_univ3_rv1.py  influx_populate.py  influx_sushi.py  influx_univ3.py  influx_univ3_1h.py  influx_univ3_1h_90d.py  influx_univ3_1m.py  nftx_data.py  noise_addition_exploration.ipynb  r14_error.py  r14_trace.py  risk_automation.py  (+8 more)
tests/: test_kp3r.py
univ3_feed_output/: univ3_dai_weth.json
univ3_historic_observations/: univ3_dai_weth.json
(+157 files in other folders)
