[tool.poetry]
name = "overlay-risk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.5,<3.10"
pandas = "^1.2.3"
numpy = "^1.20.2"
influxdb-client = {extras = ["ciso"], version = "^1.16.0"}
click = "^8.0.1"
schedule = "^1.1.0"
pystable = "^0.2.3"
scipy = "^1.7.1"
eth-brownie = "1.16.3"
pycoingecko = "^2.2.0"
ccxt = "^1.59.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"
nox = "^2021.6.12"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/tests*"]

[tool.coverage.report]
fail_under = 47

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
